tests/valid/list_typed.alu
function () do
begin
int a = 1;
int b = 2;
int c = 3;
list nums = [a, b, c];
end
test
