tests/invalid/undeclared_in_set.alu
function () do
begin
int a = 1;
set S = {a, c};
end
test

